--- a/TaskJS/index.html
+++ b/TaskJS/index.html
@@ -120,7 +120,7 @@
         <div>
             <div class="container text-center">
                 <div class="row justify-content-between">
-                    <div class="col-8 p-3">
+                    <div id="category"  class="col-8 p-3">
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                             <label class="form-check-label" for="inlineCheckbox1">Category</label>
@@ -142,9 +142,9 @@
                             <label class="form-check-label" for="inlineCheckbox2">Category</label>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div id="search" class="col-4">
                         <nav class="navbar bg-body-tertiary">
-                            <div class="container-fluid">
+                            <div   class="container-fluid">
                                 <!-- <a class="navbar-brand">Navbar</a> -->
                                 <form class="d-flex" role="search">
                                     <input class="form-control me-2 col-8" type="search" placeholder="Search" aria-label="Search">
