--- a/TaskJS/index.html
+++ b/TaskJS/index.html
@@ -121,7 +121,7 @@
             <div class="container text-center">
                 <div class="row justify-content-between">
                     <div id="category"  class="col-8 p-3">
-                        <div class="form-check form-check-inline">
+                        <!-- <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                             <label class="form-check-label" for="inlineCheckbox1">Category</label>
                         </div>
@@ -140,14 +140,14 @@
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
                             <label class="form-check-label" for="inlineCheckbox2">Category</label>
-                        </div>
+                        </div> -->
                     </div>
-                    <div id="search" class="col-4">
+                    <div  class="col-4">
                         <nav class="navbar bg-body-tertiary">
                             <div   class="container-fluid">
                                 <!-- <a class="navbar-brand">Navbar</a> -->
-                                <form class="d-flex" role="search">
-                                    <input class="form-control me-2 col-8" type="search" placeholder="Search" aria-label="Search">
+                                <form id="search" class="d-flex" role="search">
+                                    <input id="searchBox" class="form-control me-2 col-8" type="search" placeholder="Search" aria-label="Search">
                                     <button class="btn btn-outline-success" type="submit"><span class="material-symbols-outlined">
                                         search
                                     </span></button>
