--- a/TaskJS/upcomingEvents.html
+++ b/TaskJS/upcomingEvents.html
@@ -132,7 +132,7 @@
             <div>
                 <div class="container text-center">
                     <div class="row justify-content-between">
-                        <div class="col-8 p-3">
+                        <div  id="category" class="col-8 p-3">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                                 <label class="form-check-label" for="inlineCheckbox1">Category</label>
@@ -159,7 +159,7 @@
                                 <div class="container-fluid">
                                     <!-- <a class="navbar-brand">Navbar</a> -->
                                     <form class="d-flex" role="search">
-                                        <input class="form-control me-2 col-8" type="search" placeholder="Search"
+                                        <input id="searchBox" class="form-control me-2 col-8" type="search" placeholder="Search"
                                             aria-label="Search">
                                         <button class="btn btn-outline-success" type="submit"><span
                                                 class="material-symbols-outlined">
